# streamlet

./: .dockerignore  .envrc  CHANGELOG.md  Cargo.toml  README.md  deny.toml  flake.nix  release-please-config.json  rust-toolchain.toml
.docker/: Dockerfile.cleanup  Dockerfile.pbf-patch  Dockerfile.server  Dockerfile.valhalla  entrypoint_cleanup.sh  entrypoint_pbf-patch.sh  entrypoint_valhalla.sh  generate-lib.sh  lib.sh  valhalla.json
.github/workflows/: audit.yaml  build-images.yaml  ci.yaml  docker-build.yaml  generate-tiles.yaml  release-please.yaml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  matrix.rs  router.rs
crates/core/src/domain/: coordinate.rs  customer.rs  mod.rs  node.rs  problem.rs  solution.rs  time.rs  vehicle.rs
crates/core/src/solver/: construction.rs  mod.rs  route.rs  search.rs  segments.rs
crates/core/tests/: solomon.rs
crates/pbf-patch/: Cargo.toml
crates/pbf-patch/src/: construction.rs  geometry.rs  lib.rs  main.rs  model.rs  osc.rs  pbf.rs  spatial.rs  verkehrsticker.rs
crates/pbf-patch/tests/: construction.rs
crates/pbf-patch/tests/fixtures/: flensburg.osm  flensburg.osm.pbf  verkehrsticker.html
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  startup.rs
crates/server/src/http/: mod.rs
crates/server/src/http/v1/: dto.rs  error.rs  health.rs  mod.rs  solve.rs
crates/server/src/infra/: mod.rs  valhalla.rs
crates/server/src/service/: mod.rs
crates/server/test/api/: health.rs  helpers.rs  main.rs  solve.rs
