[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Streamlet Server"
readme = "../../README.md"
publish.workspace = true
default-run = "streamlet"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "streamlet"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
