[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Streamlet Server"
readme = "../../README.md"
publish.workspace = true
default-run = "streamlet"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "streamlet"

[[test]]
name = "api"
path = "test/api/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
streamlet-core = { path = "../core" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"

[dev-dependencies]
wiremock = "0.6.5"
